--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "koa": "^2.13.4",
     "koa-router": "^10.1.1",
+    "svg-captcha": "^1.4.0",
     "ws": "^8.5.0"
   }
 }
