--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -8,7 +8,10 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.3",
+    "axios": "^0.26.1",
     "electron": "^18.0.0",
+    "history": "^5.3.0",
+    "pubsub-js": "^1.9.4",
     "pubsub.js": "^1.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -43,5 +46,5 @@
     ]
   },
   "homepage": ".",
-  "proxy": ""
+  "proxy": "http://localhost:5050"
 }
